--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ joblib==1.3.1
 MarkupSafe==2.1.3
 numpy==1.25.1
 pandas==2.0.3
+pip==23.2
 python-dateutil==2.8.2
 pytz==2023.3
 scikit-learn==1.3.0
